# portfolio-web-bot

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  Dockerfile  PLAN.md  README.md  app.py  config.py  logger.py  main.py  pyproject.toml  rag_pipeline.py  render.yaml  requirements.lock.txt  requirements.txt  vercel.json
.deepeval/: .deepeval-cache.json  .deepeval_telemetry.txt  .latest_run_full.json  .latest_test_run.json
.github/workflows/: ci.yml  ci_cd.yaml  keep-alive.yml  keep_alive.yaml
app/agents/: graph.py  state.py
app/agents/nodes/: agent.py  guard.py  planner.py  responder.py  retriever.py  tools.py
app/core/: __init__.py  circuit_breaker.py  config.py  embeddings.py  logging.py
app/gateway/: client.py
app/guardrails/: colang_rules.py  rails.py
app/ingestion/: graph_builder.py  processor.py
app/ingestion/chunking/: __init__.py  base.py  markdown_chunker.py  recursive_chunker.py
app/ingestion/fetchers/: github_fetcher.py
app/ingestion/loader/: __init__.py  base.py  markdown_loader.py  pdf_loader.py
app/services/: chatbot.py  graph_service.py
app/services/retrieval/: __init__.py  qdrant_service.py  ranking_service.py
data/: enriched_golden_dataset.json  golden_dataset.json  golden_dataset_full.json
docs/: 01_SYSTEM_OVERVIEW.md  02_INGESTION_ENGINE.md  03_NODE_INTELLIGENCE.md  04_TRACING_AND_OBSERVABILITY.md  05_ENVIRONMENT_VARIABLES.md  06_KNOWN_GOTCHAS.md  07_FLASHRANK_RERANKING.md  08_GUARDRAILS.md  09_LLM_GATEWAY.md  10_AGENT.md  11_EVALS.md  12_EVALS_PIPELINE.md  13_CI_CD.md  PLAN.md  threat-model.md
evals/: custom_eval_model.py  data_parser.py  eval_runner.py
notebook/: interactive_test.ipynb
scratch/: interactive_test.ipynb  interactive_test.py
scripts/: fetch_github_sources.py  ingest.py  run_evals.py  test_guardrails.py  test_portkey.py  test_react_loop.py
src/: config.py  rag_pipeline.py
