[project]
name = "potfolio-web-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "cachetools>=6.2.2",
    "deepeval>=4.0.7",
    "faiss-cpu>=1.13.0",
    "fastapi>=0.121.2",
    "flashrank>=0.2.10",
    "google-generativeai>=0.8.6",
    "gunicorn>=23.0.0",
    "httpx>=0.28.1",
    "ipykernel>=7.3.0",
    "ipywidgets>=8.1.8",
    "langchain>=1.0.7",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=4.2.6",
    "langchain-google-vertexai>=3.2.4",
    "langchain-groq>=1.0.1",
    "langchain-huggingface>=1.2.2",
    "langchain-nvidia-ai-endpoints>=1.4.3",
    "langchain-openai>=1.0.3",
    "langchain-openrouter>=0.2.3",
    "langfuse>=4.13.0",
    "langgraph>=1.0.3",
    "langsmith>=0.4.43",
    "logfire[fastapi,requests]>=4.37.0",
    "loguru>=0.7.3",
    "nemoguardrails>=0.23.0",
    "nest-asyncio>=1.6.0",
    "numpy>=2.3.5",
    "pdfplumber>=0.11.10",
    "portkey-ai>=2.3.2",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.12.0",
    "pypdf>=6.3.0",
    "pypdf2>=3.0.1",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.1",
    "python-pptx>=1.0.2",
    "pytz>=2026.2",
    "qdrant-client>=1.18.0",
    "ragas>=0.4.3",
    "rank-bm25>=0.2.2",
    "requests>=2.32.5",
    "sentence-transformers>=3.0.0",
    "streamlit>=1.58.0",
    "unstructured>=0.23.1",
    "uvicorn[standard]>=0.38.0",
]
